# light-lang

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  format_code.sh  specs.md
compiler/: Cargo.toml
compiler/src/: debug.rs  lexer.rs  lib.rs
compiler/src/desugar/: for_desugar.rs  import_resolver.rs  mod.rs
compiler/src/generation/: expr_generator.rs  ir_generator.rs  stmt_generator.rs
compiler/src/parser/: ast_printer.rs  expression_parser.rs  literals.rs  mod.rs  parser.rs  statement_parser.rs  type_parser.rs  visitors.rs
compiler/src/type_system/: mod.rs  type_check.rs  type_check_expressions.rs  type_check_statement.rs  typed.rs  types_table.rs  value_type.rs
compiler/tests/: function_test.rs  if_statement_test.rs  loop_tests.rs  module_tests.rs  pointer_test.rs  struct_test.rs  variable_tests.rs
compiler_macro/: Cargo.toml
compiler_macro/src/: lib.rs
light/: Cargo.toml
light/src/: main.rs  repl.rs
lightc/: Cargo.toml
lightc/src/: main.rs  object_builder.rs
misc/: light.vim
src/: lexer.rs  main.rs  repl.rs
src/generation/: expr_generator.rs  ir_generator.rs  mod.rs  stmt_generator.rs
src/parser/: ast_printer.rs  expression_parser.rs  mod.rs  parser.rs  statement_parser.rs  visitors.rs
src/type_system/: mod.rs  type_check.rs  value_type.rs
stdlib/: math.lht  memory.lht  stdio.lht  system.lht
